--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eventsource-parser": "^1.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "stream": "^0.0.2"
   }
 }
