--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 OPENAI_API_KEY1=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
 OPENAI_API_KEY2=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
 OPENAI_API_KEY3=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
+OPENAI_API_KEY=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
