--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.78",
     "stream": "^0.0.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "markdown-pdf": "^11.0.0"
   }
 }
